add simple equation

--- a/prml_4.1.4.ipynb
+++ b/prml_4.1.4.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# PRML 4.1.4~\n",
     "\n",
-    "## 前回のおさらい\n",
+    "## 前回\n",
     "\n",
     "* 線形識別モデル\n",
     "* 識別関数\n",
@@ -17,7 +17,13 @@
     "\n",
     "* フィッシャーの判別識別\n",
     "    * 線形識別モデル　と　次元の削減\n",
-    "    * ラグランジュ乗数\n"
+    "    * ラグランジュ乗数\n",
+    "\n",
+    "うまく分類できる\n",
+    "$\\displaystyle\n",
+    "y = \\bf{w}^Tx$\n",
+    "\n",
+    "のパラメタ$\\bf{w}$を求める。\n"
    ]
   },
   {
@@ -46,7 +52,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
