--- a/prml_4.1.4.ipynb
+++ b/prml_4.1.4.ipynb
@@ -15,7 +15,8 @@
     "  * 最小二乗法での分類では外れ値に敏感、領域を小さく判定してしまう。\n",
     "<img src=\"./images/Figure4.4b.jpg\" width=\"200px\" />\n",
     "<img src=\"./images/Figure4.5a.jpg\" width=\"200px\" />\n",
-    "\n",
+    "    \n",
+    "             \n",
     "* 登場したパラメタと識別関数の関係（今回分でも使う）\n",
     "<img src=\"./images/Figure4.1.jpg\" width=\"300px\" />\n"
    ]
@@ -55,37 +56,68 @@
     "* 最大化したい関数 : $f(\\bf{w}$$) = \\bf{w}^T(m_2-m_1)$\n",
     "* 制約条件 : $g(\\bf{w}$$) = \\bf{w}^Tw$$ -1 = 0 $ ※ $\\bf{w}$ は単位長 $\\Sigma_i w_i^2 =  1$\n",
     "\n",
-    "* $\\Sigma_i w_i^2\n",
+    "* $ \\Sigma_i w_i^2\n",
     "= w_1^2 + w_2^2 + ... + w_n^2\n",
     "= (w_1, w_2,...,w_n)\\left(\n",
     "    \\begin{array}{c}\n",
-    "      w_1 \\\\\n",
+    "    w_1 \\\\\n",
     "      w_2 \\\\\n",
     "      \\vdots \\\\\n",
     "      w_n \n",
     "    \\end{array}\n",
     "    \\right)\n",
     "= \\bf{w}^Tw\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 演習4.4\n",
+    "\n",
+    "$L = \\bf{w}^T(m_2 - m_1)$  - $\\lambda(\\bf{w}^Tw$$-1) $\n",
+    "\n",
+    "-----------------------------\n",
+    "\n",
+    "$ \\frac{\\partial }{\\partial \\bf{w}} \\bf{w^Tw}$\n",
+    "\n",
+    "$ = (\\frac{\\partial }{\\partial \\bf{w}} \\bf{w^T})w + \\bf{w^T}(\\frac{\\partial }{\\partial \\bf{w}} w)$\n",
+    "\n",
+    "$ = (1,1, ..., 1)\\bf{w} + \\bf{w^T}$$(1,1, ..., 1)^T$\n",
+    "\n",
+    "$ = \\bf{w + w} \\\\\n",
+    "  = 2w\n",
     "$\n",
     "\n",
+    "-----------------------------\n",
     "\n",
-    "$L = \\bf{w}^T(m_2 - m_1)$  - $\\lambda(\\bf{w}^Tw$$-1)$\n",
+    "$\n",
+    "\\frac{\\partial }{\\partial \\bf{w}} L \n",
+    "= (\\bf{m_2 - m_1}$$)$  - $\\lambda(2\\bf{w} $$ - 0)\n",
+    "$\n",
     "\n",
-    "...\n",
-    "(頑張れたら書く)\n",
+    "$\\frac{\\partial }{\\partial \\bf{w}} L = 0 $ とすると\n",
     "\n",
+    "$(\\bf{m_2 - m_1}$$)$ = $\\lambda(2\\bf{w})$\n",
     "\n",
+    "$\\bf{w}$$ = \\frac{\\bf{(m_2 - m1)}}{2\\lambda} $\n",
+    "\n",
+    "$\n",
+    "\\bf{w} \\propto{(m_2 - m1)} \n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### クラス内の分散の最小化\n",
     "\n",
     "#### フィッシャーの判別基準\n",
     "\n",
     "* $S_B$ は対称行列 $S_B = S_B^{-T}$\n",
-    "* $\\frac{\\partial }{\\partial \\bf{w}} (\\bf{w}^TAx)= (A+A^Tx)$\n",
-    "\n",
-    "...\n",
-    "(頑張れたら書く)\n",
-    "\n",
-    "\n"
+    "* $\\frac{\\partial }{\\partial \\bf{w}} (\\bf{w}^TAx)= (A+A^Tx)$\n"
    ]
   },
   {
