--- a/prml_4.1.4.ipynb
+++ b/prml_4.1.4.ipynb
@@ -79,18 +79,18 @@
     "\n",
     "$L = \\vec{w}^T(\\vec{m_2} - \\vec{m_1})  - \\lambda(\\vec{w}^T\\vec{w}-1) $\n",
     "\n",
-    "$ \\frac{\\partial }{\\partial \\vec{w}} \\vec{w}^T\\vec{w}$\n",
+    "   - $ \\frac{\\partial }{\\partial \\bf{w}} \\bf{w^Tw}$ <br />\n",
+    "$ = (\\frac{\\partial }{\\partial \\bf{w}} \\bf{w^T})w + \\bf{w^T}(\\frac{\\partial }{\\partial \\bf{w}} w)$\n",
+    "<br />\n",
+    "$ = (1,1, ..., 1)\\bf{w} + \\bf{w^T}$$(1,1, ..., 1)^T$\n",
     "\n",
-    "$ = (\\frac{\\partial }{\\partial \\vec{w}} \\vec{w}^T) \\vec{w} + \\vec{w}^T(\\frac{\\partial }{\\partial \\vec{w}} \\vec{w})$\n",
-    "\n",
-    "$ = (1,1, ..., 1)\\vec{w} + \\vec{w}^T (1,1, ..., 1)^T$\n",
-    "\n",
-    "$ = \\vec{w} + \\vec{w} \\\\\n",
-    "  = 2 \\vec{w}\n",
+    "$ = \\bf{w + w} \\\\\n",
+    "  = 2w\n",
     "$\n",
     "\n",
-    "$\\frac{\\partial }{\\partial \\vec{w}} L \n",
-    "= (\\vec{m_2} - \\vec{m_1}) - \\lambda(2\\vec{w} - 0)\n",
+    "$\n",
+    "\\frac{\\partial }{\\partial \\bf{w}} L \n",
+    "= (\\bf{m_2 - m_1}$$)$  - $\\lambda(2\\bf{w} $$ - 0)\n",
     "$\n",
     "\n",
     "$\\frac{\\partial }{\\partial \\bf{w}} L = 0 $ とすると\n",
