fix vector in markdown

--- a/prml_4.1.4.ipynb
+++ b/prml_4.1.4.ipynb
@@ -30,9 +30,9 @@
     "### フィッシャーの線形識別\n",
     "\n",
     "* 2クラスの場合で考える。\n",
-    "* うまく分類できる$ y = \\bf{w}^Tx $ のパラメタ$\\bf{w}$を求める。\n",
-    "    * $\\bf{w}^T$$ = (w_0,w_1,...,w_n)$\n",
-    "    * $\\bf{x} $$ = \\left(\n",
+    "* うまく分類できる$ y = \\vec{w}^T\\vec{x} $ のパラメタ$\\vec{w}$を求める。\n",
+    "    * $\\vec{w}^T = (w_0,w_1,...,w_n)$ ベクトルを横に転置したもの\n",
+    "    * $\\vec{x} $$ = \\left(\n",
     "    \\begin{array}{ccc}\n",
     "      x_1 \\\\\n",
     "      x_2 \\\\\n",
@@ -50,11 +50,12 @@
     "#### 制約付き最大化問題\n",
     "\n",
     "* ラグランジュの未定乗数法\n",
-    "$L(\\bf{x}$$,\\lambda) = f(\\bf{x}$$) - \\lambda g(\\bf{x}$$ ) $ \n",
+    "$L({x_n},\\lambda) = f(x_n) - \\lambda g(x_n) $ \n",
     "から$\\lambda$含めたパラメタそれぞれ微分して解く。\n",
     "\n",
-    "* 最大化したい関数 : $f(\\bf{w}$$) = \\bf{w}^T(m_2-m_1)$\n",
-    "* 制約条件 : $g(\\bf{w}$$) = \\bf{w}^Tw$$ -1 = 0 $ ※ $\\bf{w}$ は単位長 $\\Sigma_i w_i^2 =  1$\n",
+    "* 最大化したい関数 : $f(\\vec{w}) = \\vec{w}^T(\\vec{m_2}-\\vec{m_1})$\n",
+    "* 制約条件 : $g(\\vec{w}) = \\vec{w}^T\\vec{w} -1 = 0 $ \n",
+    "※ $\\vec{w}$ は単位長 $\\Sigma_i w_i^2 =  1$\n",
     "\n",
     "* $ \\Sigma_i w_i^2\n",
     "= w_1^2 + w_2^2 + ... + w_n^2\n",
@@ -66,7 +67,7 @@
     "      w_n \n",
     "    \\end{array}\n",
     "    \\right)\n",
-    "= \\bf{w}^Tw\n",
+    "= \\vec{w}^T\\vec{w}\n",
     "$"
    ]
   },
@@ -76,35 +77,30 @@
    "source": [
     "#### 演習4.4\n",
     "\n",
-    "$L = \\bf{w}^T(m_2 - m_1)$  - $\\lambda(\\bf{w}^Tw$$-1) $\n",
+    "$L = \\vec{w}^T(\\vec{m_2} - \\vec{m_1})  - \\lambda(\\vec{w}^T\\vec{w}-1) $\n",
     "\n",
-    "-----------------------------\n",
+    "$ \\frac{\\partial }{\\partial \\vec{w}} \\vec{w}^T\\vec{w}$\n",
     "\n",
-    "$ \\frac{\\partial }{\\partial \\bf{w}} \\bf{w^Tw}$\n",
+    "$ = (\\frac{\\partial }{\\partial \\vec{w}} \\vec{w}^T) \\vec{w} + \\vec{w}^T(\\frac{\\partial }{\\partial \\vec{w}} \\vec{w})$\n",
     "\n",
-    "$ = (\\frac{\\partial }{\\partial \\bf{w}} \\bf{w^T})w + \\bf{w^T}(\\frac{\\partial }{\\partial \\bf{w}} w)$\n",
+    "$ = (1,1, ..., 1)\\vec{w} + \\vec{w}^T (1,1, ..., 1)^T$\n",
     "\n",
-    "$ = (1,1, ..., 1)\\bf{w} + \\bf{w^T}$$(1,1, ..., 1)^T$\n",
-    "\n",
-    "$ = \\bf{w + w} \\\\\n",
-    "  = 2w\n",
+    "$ = \\vec{w} + \\vec{w} \\\\\n",
+    "  = 2 \\vec{w}\n",
     "$\n",
     "\n",
-    "-----------------------------\n",
-    "\n",
-    "$\n",
-    "\\frac{\\partial }{\\partial \\bf{w}} L \n",
-    "= (\\bf{m_2 - m_1}$$)$  - $\\lambda(2\\bf{w} $$ - 0)\n",
+    "$\\frac{\\partial }{\\partial \\vec{w}} L \n",
+    "= (\\vec{m_2} - \\vec{m_1}) - \\lambda(2\\vec{w} - 0)\n",
     "$\n",
     "\n",
     "$\\frac{\\partial }{\\partial \\bf{w}} L = 0 $ とすると\n",
     "\n",
-    "$(\\bf{m_2 - m_1}$$)$ = $\\lambda(2\\bf{w})$\n",
+    "$(\\vec{m_2} - \\vec{m_1}) = \\lambda(2\\vec{w})$\n",
     "\n",
-    "$\\bf{w}$$ = \\frac{\\bf{(m_2 - m1)}}{2\\lambda} $\n",
+    "$\\vec{w} = \\frac{(\\vec{m_2} - \\vec{m1})}{2\\lambda} $\n",
     "\n",
     "$\n",
-    "\\bf{w} \\propto{(m_2 - m1)} \n",
+    "\\vec{w} \\propto{(\\vec{m_2} - \\vec{m1})} \n",
     "$"
    ]
   },
@@ -157,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
