--- a/prml_4.1.4.ipynb
+++ b/prml_4.1.4.ipynb
@@ -79,17 +79,17 @@
     "\n",
     "$L = \\vec{w}^T(\\vec{m_2} - \\vec{m_1})  - \\lambda(\\vec{w}^T\\vec{w}-1) $\n",
     "\n",
-    "   - $ \\frac{\\partial }{\\partial \\bf{w}} \\bf{w^Tw}$ <br />\n",
+    "$ \\frac{\\partial }{\\partial \\bf{w}} \\bf{w^Tw}$\n",
+    "\n",
     "$ = (\\frac{\\partial }{\\partial \\bf{w}} \\bf{w^T})w + \\bf{w^T}(\\frac{\\partial }{\\partial \\bf{w}} w)$\n",
-    "<br />\n",
+    "\n",
     "$ = (1,1, ..., 1)\\bf{w} + \\bf{w^T}$$(1,1, ..., 1)^T$\n",
     "\n",
     "$ = \\bf{w + w} \\\\\n",
     "  = 2w\n",
     "$\n",
     "\n",
-    "$\n",
-    "\\frac{\\partial }{\\partial \\bf{w}} L \n",
+    "$\\frac{\\partial }{\\partial \\bf{w}} L \n",
     "= (\\bf{m_2 - m_1}$$)$  - $\\lambda(2\\bf{w} $$ - 0)\n",
     "$\n",
     "\n",
