--- a/kaggle/coupon-purchase-prediction/load_data.ipynb
+++ b/kaggle/coupon-purchase-prediction/load_data.ipynb
@@ -2,11 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘dplyr’\n",
+      "\n",
+      "The following object is masked from ‘package:stats’:\n",
+      "\n",
+      "    filter\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    intersect, setdiff, setequal, union\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(\"magrittr\")\n",
     "library(\"dplyr\")"
@@ -14,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +81,7 @@
        "6                   横浜  神奈川県 c65b550cbef918796ad53b1d5b7165c1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -88,7 +106,7 @@
        " (Other)                         :2034  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -136,7 +154,7 @@
        "6            千葉    千葉県 439db4336f84d4e4a13290fc0d7e6c4e"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -161,7 +179,7 @@
        " (Other)                         :137855  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -223,7 +241,7 @@
        "6 4f3b5b91d9831192557c056022fdc1f2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -264,7 +282,7 @@
        " (Other)                         :158555  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -347,7 +365,7 @@
        "6 78aec0e250021cf5247986f6ca55a47e"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -420,7 +438,7 @@
        " (Other)                         :304   "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -503,7 +521,7 @@
        "6 439db4336f84d4e4a13290fc0d7e6c4e"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -576,95 +594,7 @@
        " (Other)                         :19407  "
       ]
      },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "################## user_list ##################"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th></th><th scope=col>REG_DATE</th><th scope=col>SEX_ID</th><th scope=col>AGE</th><th scope=col>WITHDRAW_DATE</th><th scope=col>PREF_NAME</th><th scope=col>USER_ID_hash</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>1</th><td>2012-03-28 14:14:18</td><td>f</td><td>25</td><td>NA</td><td></td><td>d9dca3cb44bab12ba313eaa681f663eb</td></tr>\n",
-       "\t<tr><th scope=row>2</th><td>2011-05-18 00:41:48</td><td>f</td><td>34</td><td>NA</td><td>東京都</td><td>560574a339f1b25e57b0221e486907ed</td></tr>\n",
-       "\t<tr><th scope=row>3</th><td>2011-06-13 16:36:58</td><td>m</td><td>41</td><td>NA</td><td>愛知県</td><td>e66ae91b978b3229f8fd858c80615b73</td></tr>\n",
-       "\t<tr><th scope=row>4</th><td>2012-02-08 12:56:15</td><td>m</td><td>25</td><td>NA</td><td></td><td>43fc18f32eafb05713ec02935e2c2825</td></tr>\n",
-       "\t<tr><th scope=row>5</th><td>2011-05-22 23:43:56</td><td>m</td><td>62</td><td>NA</td><td>神奈川県</td><td>dc6df8aa860f8db0d710ce9d4839840f</td></tr>\n",
-       "\t<tr><th scope=row>6</th><td>2011-05-27 16:17:19</td><td>f</td><td>50</td><td>NA</td><td>広島県</td><td>f430e8302c1fd0915bce0c068ecb2f82</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|llllll}\n",
-       "  & REG_DATE & SEX_ID & AGE & WITHDRAW_DATE & PREF_NAME & USER_ID_hash\\\\\n",
-       "\\hline\n",
-       "\t1 & 2012-03-28 14:14:18 & f & 25 & NA &  & d9dca3cb44bab12ba313eaa681f663eb\\\\\n",
-       "\t2 & 2011-05-18 00:41:48 & f & 34 & NA & 東京都 & 560574a339f1b25e57b0221e486907ed\\\\\n",
-       "\t3 & 2011-06-13 16:36:58 & m & 41 & NA & 愛知県 & e66ae91b978b3229f8fd858c80615b73\\\\\n",
-       "\t4 & 2012-02-08 12:56:15 & m & 25 & NA &  & 43fc18f32eafb05713ec02935e2c2825\\\\\n",
-       "\t5 & 2011-05-22 23:43:56 & m & 62 & NA & 神奈川県 & dc6df8aa860f8db0d710ce9d4839840f\\\\\n",
-       "\t6 & 2011-05-27 16:17:19 & f & 50 & NA & 広島県 & f430e8302c1fd0915bce0c068ecb2f82\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/plain": [
-       "             REG_DATE SEX_ID AGE WITHDRAW_DATE PREF_NAME\n",
-       "1 2012-03-28 14:14:18      f  25          <NA>          \n",
-       "2 2011-05-18 00:41:48      f  34          <NA>    東京都\n",
-       "3 2011-06-13 16:36:58      m  41          <NA>    愛知県\n",
-       "4 2012-02-08 12:56:15      m  25          <NA>          \n",
-       "5 2011-05-22 23:43:56      m  62          <NA>  神奈川県\n",
-       "6 2011-05-27 16:17:19      f  50          <NA>    広島県\n",
-       "                      USER_ID_hash\n",
-       "1 d9dca3cb44bab12ba313eaa681f663eb\n",
-       "2 560574a339f1b25e57b0221e486907ed\n",
-       "3 e66ae91b978b3229f8fd858c80615b73\n",
-       "4 43fc18f32eafb05713ec02935e2c2825\n",
-       "5 dc6df8aa860f8db0d710ce9d4839840f\n",
-       "6 f430e8302c1fd0915bce0c068ecb2f82"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "    REG_DATE                   SEX_ID         AGE      \n",
-       " Min.   :2010-07-21 13:44:02   f:10983   Min.   :15.0  \n",
-       " 1st Qu.:2011-02-23 16:54:37   m:11890   1st Qu.:33.0  \n",
-       " Median :2011-07-07 17:28:47             Median :41.0  \n",
-       " Mean   :2011-07-14 07:50:56             Mean   :42.5  \n",
-       " 3rd Qu.:2011-12-05 18:00:20             3rd Qu.:51.0  \n",
-       " Max.   :2012-06-30 23:29:01             Max.   :80.0  \n",
-       "                                                       \n",
-       " WITHDRAW_DATE                    PREF_NAME   \n",
-       " Min.   :2011-07-07 19:51:30           :7256  \n",
-       " 1st Qu.:2011-10-03 01:18:37   東京都  :2830  \n",
-       " Median :2011-12-09 03:02:11   神奈川県:1653  \n",
-       " Mean   :2011-12-11 20:43:07   大阪府  :1638  \n",
-       " 3rd Qu.:2012-02-05 17:51:09   愛知県  : 938  \n",
-       " Max.   :2012-07-01 10:54:20   兵庫県  : 879  \n",
-       " NA's   :21951                 (Other) :7679  \n",
-       "                           USER_ID_hash  \n",
-       " 0000b53e182165208887ba65c079fc21:    1  \n",
-       " 00035b86e6884589ec8d28fbf2fe7757:    1  \n",
-       " 0005b1068d5f2b8f2a7c978fcfe1ca06:    1  \n",
-       " 000cc06982785a19e2a2fdb40b1c9d59:    1  \n",
-       " 0013518e41c416cd6a181d277dd8ca0b:    1  \n",
-       " 001acdee812a18acfd7509172bed5700:    1  \n",
-       " (Other)                         :22867  "
-      ]
-     },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,15 +632,7 @@
     "coupon_list_train$VALIDFROM %<>% as.POSIXct\n",
     "coupon_list_train$VALIDEND %<>% as.POSIXct\n",
     "head(coupon_list_train)\n",
-    "summary(coupon_list_train)\n",
-    "    \n",
-    "cat(\"################## user_list ##################\")\n",
-    "user_list <- read.csv(\"./data/user_list.csv\")\n",
-    "user_list$REG_DATE %<>% as.POSIXct\n",
-    "user_list$WITHDRAW_DATE %<>% as.POSIXct\n",
-    "head(user_list)\n",
-    "summary(user_list)\n",
-    "\n"
+    "summary(coupon_list_train)"
    ]
   },
   {
@@ -925,12 +847,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################## prefecture_locations ##################"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>PREF_NAME</th><th scope=col>PREFECTUAL_OFFICE</th><th scope=col>LATITUDE</th><th scope=col>LONGITUDE</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>北海道</td><td>札幌市</td><td>43.06397</td><td>141.3479</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>青森県</td><td>青森市</td><td>40.82462</td><td>140.7406</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>岩手県</td><td>盛岡市</td><td>39.70353</td><td>141.1527</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>宮城県</td><td>仙台市</td><td>38.26884</td><td>140.8721</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>秋田県</td><td>秋田市</td><td>39.7186</td><td>140.1023</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>山形県</td><td>山形市</td><td>38.24044</td><td>140.3636</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llll}\n",
+       "  & PREF_NAME & PREFECTUAL_OFFICE & LATITUDE & LONGITUDE\\\\\n",
+       "\\hline\n",
+       "\t1 & 北海道 & 札幌市 & 43.06397 & 141.3479\\\\\n",
+       "\t2 & 青森県 & 青森市 & 40.82462 & 140.7406\\\\\n",
+       "\t3 & 岩手県 & 盛岡市 & 39.70353 & 141.1527\\\\\n",
+       "\t4 & 宮城県 & 仙台市 & 38.26884 & 140.8721\\\\\n",
+       "\t5 & 秋田県 & 秋田市 & 39.7186 & 140.1023\\\\\n",
+       "\t6 & 山形県 & 山形市 & 38.24044 & 140.3636\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "  PREF_NAME PREFECTUAL_OFFICE LATITUDE LONGITUDE\n",
+       "1    北海道            札幌市 43.06397  141.3479\n",
+       "2    青森県            青森市 40.82462  140.7406\n",
+       "3    岩手県            盛岡市 39.70353  141.1527\n",
+       "4    宮城県            仙台市 38.26884  140.8721\n",
+       "5    秋田県            秋田市 39.71860  140.1023\n",
+       "6    山形県            山形市 38.24044  140.3636"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "   PREF_NAME   PREFECTUAL_OFFICE    LATITUDE       LONGITUDE    \n",
+       " 愛知県 : 1   さいたま市: 1      Min.   :26.21   Min.   :127.7  \n",
+       " 愛媛県 : 1   宇都宮市  : 1      1st Qu.:34.21   1st Qu.:133.3  \n",
+       " 茨城県 : 1   横浜市    : 1      Median :35.18   Median :136.2  \n",
+       " 岡山県 : 1   岡山市    : 1      Mean   :35.38   Mean   :136.0  \n",
+       " 沖縄県 : 1   岐阜市    : 1      3rd Qu.:36.48   3rd Qu.:139.6  \n",
+       " 岩手県 : 1   宮崎市    : 1      Max.   :43.06   Max.   :141.3  \n",
+       " (Other):41   (Other)   :41                                     "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################## sample_submission ##################"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>USER_ID_hash</th><th scope=col>PURCHASED_COUPONS</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>0000b53e182165208887ba65c079fc21</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>00035b86e6884589ec8d28fbf2fe7757</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>0005b1068d5f2b8f2a7c978fcfe1ca06</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>000cc06982785a19e2a2fdb40b1c9d59</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>0013518e41c416cd6a181d277dd8ca0b</td><td>NA</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>001acdee812a18acfd7509172bed5700</td><td>NA</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|ll}\n",
+       "  & USER_ID_hash & PURCHASED_COUPONS\\\\\n",
+       "\\hline\n",
+       "\t1 & 0000b53e182165208887ba65c079fc21 & NA\\\\\n",
+       "\t2 & 00035b86e6884589ec8d28fbf2fe7757 & NA\\\\\n",
+       "\t3 & 0005b1068d5f2b8f2a7c978fcfe1ca06 & NA\\\\\n",
+       "\t4 & 000cc06982785a19e2a2fdb40b1c9d59 & NA\\\\\n",
+       "\t5 & 0013518e41c416cd6a181d277dd8ca0b & NA\\\\\n",
+       "\t6 & 001acdee812a18acfd7509172bed5700 & NA\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "                      USER_ID_hash PURCHASED_COUPONS\n",
+       "1 0000b53e182165208887ba65c079fc21                NA\n",
+       "2 00035b86e6884589ec8d28fbf2fe7757                NA\n",
+       "3 0005b1068d5f2b8f2a7c978fcfe1ca06                NA\n",
+       "4 000cc06982785a19e2a2fdb40b1c9d59                NA\n",
+       "5 0013518e41c416cd6a181d277dd8ca0b                NA\n",
+       "6 001acdee812a18acfd7509172bed5700                NA"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                           USER_ID_hash   PURCHASED_COUPONS\n",
+       " 0000b53e182165208887ba65c079fc21:    1   Mode:logical     \n",
+       " 00035b86e6884589ec8d28fbf2fe7757:    1   NA's:22873       \n",
+       " 0005b1068d5f2b8f2a7c978fcfe1ca06:    1                    \n",
+       " 000cc06982785a19e2a2fdb40b1c9d59:    1                    \n",
+       " 0013518e41c416cd6a181d277dd8ca0b:    1                    \n",
+       " 001acdee812a18acfd7509172bed5700:    1                    \n",
+       " (Other)                         :22867                    "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################## user_list ##################"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th></th><th scope=col>REG_DATE</th><th scope=col>SEX_ID</th><th scope=col>AGE</th><th scope=col>WITHDRAW_DATE</th><th scope=col>PREF_NAME</th><th scope=col>USER_ID_hash</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>2012-03-28 14:14:18</td><td>f</td><td>25</td><td>NA</td><td></td><td>d9dca3cb44bab12ba313eaa681f663eb</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>2011-05-18 00:41:48</td><td>f</td><td>34</td><td>NA</td><td>東京都</td><td>560574a339f1b25e57b0221e486907ed</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>2011-06-13 16:36:58</td><td>m</td><td>41</td><td>NA</td><td>愛知県</td><td>e66ae91b978b3229f8fd858c80615b73</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>2012-02-08 12:56:15</td><td>m</td><td>25</td><td>NA</td><td></td><td>43fc18f32eafb05713ec02935e2c2825</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>2011-05-22 23:43:56</td><td>m</td><td>62</td><td>NA</td><td>神奈川県</td><td>dc6df8aa860f8db0d710ce9d4839840f</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>2011-05-27 16:17:19</td><td>f</td><td>50</td><td>NA</td><td>広島県</td><td>f430e8302c1fd0915bce0c068ecb2f82</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llllll}\n",
+       "  & REG_DATE & SEX_ID & AGE & WITHDRAW_DATE & PREF_NAME & USER_ID_hash\\\\\n",
+       "\\hline\n",
+       "\t1 & 2012-03-28 14:14:18 & f & 25 & NA &  & d9dca3cb44bab12ba313eaa681f663eb\\\\\n",
+       "\t2 & 2011-05-18 00:41:48 & f & 34 & NA & 東京都 & 560574a339f1b25e57b0221e486907ed\\\\\n",
+       "\t3 & 2011-06-13 16:36:58 & m & 41 & NA & 愛知県 & e66ae91b978b3229f8fd858c80615b73\\\\\n",
+       "\t4 & 2012-02-08 12:56:15 & m & 25 & NA &  & 43fc18f32eafb05713ec02935e2c2825\\\\\n",
+       "\t5 & 2011-05-22 23:43:56 & m & 62 & NA & 神奈川県 & dc6df8aa860f8db0d710ce9d4839840f\\\\\n",
+       "\t6 & 2011-05-27 16:17:19 & f & 50 & NA & 広島県 & f430e8302c1fd0915bce0c068ecb2f82\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "             REG_DATE SEX_ID AGE WITHDRAW_DATE PREF_NAME\n",
+       "1 2012-03-28 14:14:18      f  25          <NA>          \n",
+       "2 2011-05-18 00:41:48      f  34          <NA>    東京都\n",
+       "3 2011-06-13 16:36:58      m  41          <NA>    愛知県\n",
+       "4 2012-02-08 12:56:15      m  25          <NA>          \n",
+       "5 2011-05-22 23:43:56      m  62          <NA>  神奈川県\n",
+       "6 2011-05-27 16:17:19      f  50          <NA>    広島県\n",
+       "                      USER_ID_hash\n",
+       "1 d9dca3cb44bab12ba313eaa681f663eb\n",
+       "2 560574a339f1b25e57b0221e486907ed\n",
+       "3 e66ae91b978b3229f8fd858c80615b73\n",
+       "4 43fc18f32eafb05713ec02935e2c2825\n",
+       "5 dc6df8aa860f8db0d710ce9d4839840f\n",
+       "6 f430e8302c1fd0915bce0c068ecb2f82"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "    REG_DATE                   SEX_ID         AGE      \n",
+       " Min.   :2010-07-21 13:44:02   f:10983   Min.   :15.0  \n",
+       " 1st Qu.:2011-02-23 16:54:37   m:11890   1st Qu.:33.0  \n",
+       " Median :2011-07-07 17:28:47             Median :41.0  \n",
+       " Mean   :2011-07-14 07:50:56             Mean   :42.5  \n",
+       " 3rd Qu.:2011-12-05 18:00:20             3rd Qu.:51.0  \n",
+       " Max.   :2012-06-30 23:29:01             Max.   :80.0  \n",
+       "                                                       \n",
+       " WITHDRAW_DATE                    PREF_NAME   \n",
+       " Min.   :2011-07-07 19:51:30           :7256  \n",
+       " 1st Qu.:2011-10-03 01:18:37   東京都  :2830  \n",
+       " Median :2011-12-09 03:02:11   神奈川県:1653  \n",
+       " Mean   :2011-12-11 20:43:07   大阪府  :1638  \n",
+       " 3rd Qu.:2012-02-05 17:51:09   愛知県  : 938  \n",
+       " Max.   :2012-07-01 10:54:20   兵庫県  : 879  \n",
+       " NA's   :21951                 (Other) :7679  \n",
+       "                           USER_ID_hash  \n",
+       " 0000b53e182165208887ba65c079fc21:    1  \n",
+       " 00035b86e6884589ec8d28fbf2fe7757:    1  \n",
+       " 0005b1068d5f2b8f2a7c978fcfe1ca06:    1  \n",
+       " 000cc06982785a19e2a2fdb40b1c9d59:    1  \n",
+       " 0013518e41c416cd6a181d277dd8ca0b:    1  \n",
+       " 001acdee812a18acfd7509172bed5700:    1  \n",
+       " (Other)                         :22867  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat(\"################## prefecture_locations ##################\")\n",
+    "prefecture_locations <- read.csv(\"./data/prefecture_locations.csv\")\n",
+    "head(prefecture_locations)\n",
+    "summary(prefecture_locations)\n",
+    "\n",
+    "cat(\"################## sample_submission ##################\")\n",
+    "sample_submission <- read.csv(\"./data/sample_submission.csv\")\n",
+    "head(sample_submission)\n",
+    "summary(sample_submission)\n",
+    "\n",
+    "cat(\"################## user_list ##################\")\n",
+    "user_list <- read.csv(\"./data/user_list.csv\")\n",
+    "user_list$REG_DATE %<>% as.POSIXct\n",
+    "user_list$WITHDRAW_DATE %<>% as.POSIXct\n",
+    "head(user_list)\n",
+    "summary(user_list)"
+   ]
   }
  ],
  "metadata": {
