fix coupon report

--- a/kaggle/coupon-purchase-prediction/load_data.ipynb
+++ b/kaggle/coupon-purchase-prediction/load_data.ipynb
@@ -2,29 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "The following object is masked from ‘package:stats’:\n",
-      "\n",
-      "    filter\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "library(\"magrittr\")\n",
     "library(\"dplyr\")"
@@ -847,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -896,7 +878,7 @@
        "6    山形県            山形市 38.24044  140.3636"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -913,10 +895,25 @@
        " (Other):41   (Other)   :41                                     "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
-    },
+    }
+   ],
+   "source": [
+    "cat(\"################## prefecture_locations ##################\")\n",
+    "prefecture_locations <- read.csv(\"./data/prefecture_locations.csv\")\n",
+    "head(prefecture_locations)\n",
+    "summary(prefecture_locations)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -961,7 +958,7 @@
        "6 001acdee812a18acfd7509172bed5700                NA"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -978,10 +975,36 @@
        " (Other)                         :22867                    "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
+    {
+     "data": {
+      "text/plain": [
+       "[1] NA"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cat(\"################## sample_submission ##################\")\n",
+    "sample_submission <- read.csv(\"./data/sample_submission.csv\")\n",
+    "head(sample_submission)\n",
+    "summary(sample_submission)\n",
+    "sample_submission$PURCHASED_COUPONS %>% unique %>% head"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1033,7 +1056,7 @@
        "6 f430e8302c1fd0915bce0c068ecb2f82"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1066,22 +1089,12 @@
        " (Other)                         :22867  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cat(\"################## prefecture_locations ##################\")\n",
-    "prefecture_locations <- read.csv(\"./data/prefecture_locations.csv\")\n",
-    "head(prefecture_locations)\n",
-    "summary(prefecture_locations)\n",
-    "\n",
-    "cat(\"################## sample_submission ##################\")\n",
-    "sample_submission <- read.csv(\"./data/sample_submission.csv\")\n",
-    "head(sample_submission)\n",
-    "summary(sample_submission)\n",
-    "\n",
     "cat(\"################## user_list ##################\")\n",
     "user_list <- read.csv(\"./data/user_list.csv\")\n",
     "user_list$REG_DATE %<>% as.POSIXct\n",
