--- a/prml/prml_4.3.2.ipynb
+++ b/prml/prml_4.3.2.ipynb
@@ -88,21 +88,46 @@
     "= \\Sigma_{n=1}^N (y_n - t_n) \\phi_n\n",
     "$\n",
     "\n",
-    "- ∑ (各データの予測値との誤差)　＊　特徴ベクトル\n",
+    "- ∑ (目的値とモデルの予測値の「誤差」)　＊ 基底関数ベクトル\n",
     "\n",
+    "## 演習4.14\n",
     "\n",
-    "# 4.3.3 反復重み付け最小二乗\n",
-    "\n",
-    "\n",
-    "\n",
-    "# 4.3.4 多クラスロジスティック回帰\n"
+    "- http://www.chokkan.org/publication/survey/prml_chapter4_discriminative_slides.pdf\n",
+    "- p.16あたり。イマイチなんだかよくわからず。。"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": []
